--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -16,9 +16,9 @@
             android:id="@+id/emailEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="22dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/editfiled"
             android:drawableLeft="@drawable/ic_baseline_email_24"
             android:drawablePadding="5dp"
@@ -36,9 +36,9 @@
             android:id="@+id/passwordEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/editfiled"
             android:drawableLeft="@drawable/ic_baseline_lock_24"
             android:drawablePadding="5dp"
@@ -70,9 +70,9 @@
             android:id="@+id/button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="15dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/registerbtn"
             android:elevation="5dp"
             android:padding="15dp"
@@ -106,7 +106,7 @@
             android:layout_marginStart="180dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="180dp"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:backgroundTint="@color/colorPrimary"
             android:progressTint="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
