--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -5,20 +5,20 @@
         android:id="@+id/nav_home"
         android:title="Home"
         android:icon="@drawable/ic_baseline_home_24"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/nav_friends"
         android:title="Friends"
         android:icon="@drawable/ic_baseline_supervisor_account_24"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/nav_notification"
         android:title="Notification"
         android:icon="@drawable/ic_baseline_notifications_24"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/nav_profile"
         android:title="Profile"
         android:icon="@drawable/ic_baseline_settings_24"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 </menu>
