--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/searchView"
+        android:icon="@drawable/ic_baseline_search_24"
+        app:showAsAction="always"
+        android:title="Search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
+
+    <item
         android:id="@+id/signOut"
         android:icon="@drawable/ic_baseline_power_settings_new_24"
-        app:showAsAction="always"/>
+        app:showAsAction="always"
+        android:title="Log out" />
+
+
+
 
 </menu>
